Completed functionality of Timer

--- a/style.css
+++ b/style.css
@@ -1,11 +1,45 @@
+.dial{
+    height: 400px;
+    width:400px;
+}
+.timer{
+    position: relative;
+    display: inline-block;
+}
+*{
+    font: inherit;
+}
 body{
-    background-color: purple;
-    margin: 15% 35% ;
-
+    font-family: 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans',
+    'Droid Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
-button{
-    font-size: 2rem;
-    padding: 2rem;
-    display: inline;
+.timer input{
+    display: block;
+    border:none;
+    width: 240px;
+    font-size: 5rem;
+    text-align: center;
 }
-
+.timer button{
+    font-size: 4rem;
+    border: none;
+    flex-wrap: wrap;
+    cursor: pointer;
+}
+.timer button:focus{
+    outline: none;
+}
+.timer input:focus{
+    outline:none;
+}
+.controls{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
